1.2.3i7:
    Core & Setup:
    * 0217 FIX: More verbose error output for SNMP errors on the command line...
    * 0288 FIX: Error messages of datasource programs (e.g. VSphere Agent) are now visible within WATO...
    * 0010 FIX: Fix computation of hour-of-the-day and day-of-month prediction...

    Checks & Agents:
    * 0060 cisco_fantray: new check for monitoring fan trays of Cisco Nexus switches
    * 0061 cisco_cpu: check now recognizes new object cpmCPUTotal5minRev...
    * 0063 veeam_client: new check to monitor status of veeam clients with special agent plugin...
    * 0064 veeam_jobs: new check to monitor the backup jobs of the veeam backup tool...
    * 0047 fritz.conn fritz.config fritz.uptime fritz.wan_if fritz.link: New checks for monitoring Fritz!Box devices...
    * 0027 esx_vsphere_sensors: it is now possible override the state of sensors...
    * 0090 apc_ats_status: New Check for monitoring APC Automatic Transfer Switches
    * 0080 Added new checks for Brocade NetIron MLX switching / routing devices...
    * 0091 apc_ats_output: new check for output measurements on APC ATS devices
    * 0068 check_sql: support for mssql databases included
    * 0208 fileinfo.groups: Added minimum/maximum file size parameters...
    * 0093 check_http: Default service description prefix can be avoided...
    * 0004 df: dynamic filesystem levels now reorder levels automatically...
    * 0069 veeam_client: limits for time since last backup introduced
    * 0214 Logwatch: context lines can now be disabled using nocontext=1...
    * 0038 casa_cpu_mem casa_cpu_temp casa_cpu_util casa_fan casa_power: New checks for casa Cable Modem Termination Systems...
    * 0097 arc_raid_status: New check for Areca RAID controllers
    * 0070 cmciii_lcp_airin cmciii_lcp_airout cmciii_lcp_fans cmciii_lcp_waterflow cmciii_lcp_waterin cmciii_lcp_waterout: new checks for the Rittal CMC-III LCP device