@@ -1,5 +1,6 @@
 1.2.3i7:
     Core & Setup:
+    * 0011 Introduce optional lower limit for predicted levels...
     * 0217 FIX: More verbose error output for SNMP errors on the command line...
     * 0288 FIX: Error messages of datasource programs (e.g. VSphere Agent) are now visible within WATO...
     * 0010 FIX: Fix computation of hour-of-the-day and day-of-month prediction...
